<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bottom_sheet"
            android:icon="@drawable/ic_star"
            android:title="@string/nav_bottom_sheet"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_star"
            android:title="@string/nav_gallery"/>
        <item
            android:id="@+id/nav_gallery_bottom_sheet"
            android:icon="@drawable/ic_star"
            android:title="@string/nav_bottom_sheet_gallery"/>
        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/ic_star"
            android:title="@string/nav_cards"/>
        <item
            android:id="@+id/nav_scroll1"
            android:icon="@drawable/ic_star"
            android:title="@string/nav_scroll1"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send"/>
        </menu>
    </item>

</menu>
